--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,10 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>-->
-<div style="width: 30%; margin: 10px auto;" *ngIf="tableSearcher.data">
+<div style="width: 20%; margin: 10px auto;" *ngIf="tableSearcher.data">
   <app-table-searcher [allSettings]="tableSearcher"></app-table-searcher>
+</div>
+<div style="width: 100%; margin: 10px auto;" *ngIf="tableSearcher.data">
   <table width="100%" class="table table-striped table-responsive">
     <tr>
       <td>#</td>
