--- a/src/app/ng-pop-alert/ng-pop-alert.component.html
+++ b/src/app/ng-pop-alert/ng-pop-alert.component.html
@@ -1,6 +1,6 @@
-<div [class.notification-display]="overlay"  [hidden]="!alert['visible']">
+<div [class.notification-display]="overlay" class="bordered" [ngStyle]="styles" [hidden]="!alert['visible']">
   <div class="{{alert['alert_class']}}" role="alert" align="left" style="position: relative; padding: 10px;">
-    <a role="button" (click)="alert['visible']=false" class="pull-right alert-link">&nbsp; <i class="fa fa-close"></i> </a>
+    <a role="button" (click)="alert['visible']=false" class="pull-right alert-link" style="cursor: pointer;">&nbsp;<b>&times;</b> </a>
     <span style="font-size:13px;" [innerHTML]="message"></span>
   </div>
 </div>
